# workout_parser

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/workout_parser/: __init__.py  fit.py  intervals_icu.py  main.py  models.py
test/: test_parsers.py
test/data/: 1_Speed_Workout_Bike.fit  1_Speed_Workout_Bike.json  30_Minute_Threshold_Test_New_Build_Phase_fit.json  30_Minute_Threshold_Test_New_Build_Phase_json.json  Aerobic_Speed_Endurance.fit  Aerobic_Speed_Endurance.json  Running_Power_Intervals_3x4m_Threshold_Cadence_Focus_.fit  Running_Power_Intervals_3x4m_Threshold_Cadence_Focus_.json  Running_Power_Intervals_4x4m_Threshold.fit  Running_Power_Intervals_4x4m_Threshold.json
