[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fitparse>=1.2.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
